--- a/src/app.css
+++ b/src/app.css
@@ -2,8 +2,20 @@
 
 :root {
 	--header-height: 4rem;
+
+	scroll-behavior: smooth;
 }
 
 @theme {
 	--color-fg: rgb(26, 26, 26);
+
+	--animate-marquee: marquee 30s linear infinite;
+	@keyframes marquee {
+		0% {
+			transform: translateX(0%);
+		}
+		100% {
+			transform: translateX(-100%);
+		}
+	}
 }
