--- a/src/app.css
+++ b/src/app.css
@@ -19,3 +19,25 @@
 		}
 	}
 }
+
+@utility underline-hover {
+	position: relative;
+
+	&::after {
+		content: '';
+		position: absolute;
+		right: 0;
+		bottom: -0.25rem; /* -bottom-1 equivalent */
+		left: 0;
+		height: 0.125rem; /* h-0.5 equivalent */
+		background-color: currentColor;
+		transform-origin: bottom right;
+		transform: scaleX(0);
+		transition: transform 300ms ease;
+	}
+
+	&:hover::after {
+		transform-origin: bottom left;
+		transform: scaleX(1);
+	}
+}
